<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_sync" android:icon="@drawable/ic_notes_cloud" android:title="@string/notes_sync_title" />
        <item android:id="@+id/nav_backup" android:icon="@drawable/ic_drv_backup" android:title="@string/notes_backup" />
        <item android:id="@+id/nav_restore" android:icon="@drawable/ic_drv_restore" android:title="@string/notes_restore" />
    </group>
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_calendar" android:icon="@drawable/ic_drv_calendar" android:title="@string/notes_calendar_title" />
        <item android:id="@+id/nav_templates" android:icon="@drawable/ic_drv_palette" android:title="@string/notes_templates_title" />
        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_drv_gear" android:title="@string/notes_settings_title" />
    </group>
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_quick_note" android:icon="@drawable/ic_drv_bolt" android:title="@string/notes_quick_title" />
        <item android:id="@+id/nav_sticky" android:icon="@drawable/ic_drv_sticky" android:title="@string/notes_sticky_title" />
        <item android:id="@+id/nav_note_tool" android:icon="@drawable/ic_drv_tool" android:title="@string/notes_tool_title" />
    </group>
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_archive" android:icon="@drawable/ic_drv_archive" android:title="@string/notes_archive_title" />
        <item android:id="@+id/nav_trash" android:icon="@drawable/ic_drv_trash" android:title="@string/notes_trash_title" />
    </group>
</menu>
